Changes_in_class

--- a/index.html
+++ b/index.html
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="reset.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="initial-scale=1.0"/>
+  <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,400italic,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
+  <!-- <link rel="stylesheet" href="reset.css"> -->
   <link rel="stylesheet" href="desktop.css">
   <link rel="stylesheet" href="debug.css">
-  <script src="js/modernizer.js" charset="utf-8"></script>
-  <title>LP Tutorial</title>
+  <!-- <script src="js/modernizr.js" charset="utf-8"></script> -->
+  <title>LP TUTORIAL</title>
 </head>
 <body>
-123
+  <header id="header" class="header">
+    <h1>RESPONSIVE LP</h1>
+    <p>Tutorial for landing page</p>
+    <nav>
+      <ul>
+        <li><a href="#">LINK 1</a></li>
+        <li><a href="#">LINK 2</a></li>
+        <li><a href="#">LINK 3</a></li>
+        <li><a href="#">LINK 4</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section class="call_to_action">
+
+  </section>
+  <section class="signup">
+
+  </section>
+  <section class="deadline">
+
+  </section>
+  <section class="how_we_work">
+
+  </section>
+  <section class="portfolio">
+
+  </section>
+  <footer>
+
+  </footer>
 </body>
 </html>
