--- a/index.html
+++ b/index.html
@@ -24,15 +24,45 @@
     </nav>
   </header>
   <section class="call_to_action">
+    <h2 class="hidden">Call-to-action</h2>
+    <article>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa mollitia ipsum perferendis, maiores in. Facilis, voluptate magnam reiciendis ab amet!</article>
+    <div id="slides"><img src="https://placeimg.com/1448/360/nature" alt=""></div>
 
   </section>
-  <section class="signup">
+  <section id="signup">
+    <h2 class="hidden">Sign up form</h2>
+    <p>Sign up for our newsletters</p>
+    <div class="signup">
+      <form action=""><input type="email"><input value="Sign up" type="submit"></form>
+    </div>
 
   </section>
   <section class="deadline">
 
   </section>
-  <section class="how_we_work">
+  <section id="how_we_work">
+    <h2>How we work</h2>
+    <article>
+      <img src="
+http://www.lingulo.com/tutorial-content/html5/img/icon1.png" alt="Lock">
+        <h3>Lorem ipsum dolor sit amet.</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, aspernatur.</p>
+      </img>
+    </article>
+    <article>
+      <img src="
+http://www.lingulo.com/tutorial-content/html5/img/icon2.png" alt="Phone">
+        <h3>In eaque, repellat. Doloremque, ea.</h3>
+        <p>Explicabo fuga, sed esse iste assumenda illum dolorem neque quis.</p>
+      </img>
+    </article>
+    <article>
+      <img src="
+http://www.lingulo.com/tutorial-content/html5/img/icon3.png" alt="Settings">
+        <h3>Nihil molestias officiis quasi ipsam.</h3>
+        <p>Ratione illo iure error vel aliquam sunt, accusantium magnam recusandae.</p>
+      </img>
+    </article>
 
   </section>
   <section class="portfolio">
