--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1.0"/>
   <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,400italic,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
-  <!-- <link rel="stylesheet" href="reset.css"> -->
+  <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="desktop.css">
   <link rel="stylesheet" href="debug.css">
   <!-- <script src="js/modernizr.js" charset="utf-8"></script> -->
@@ -23,11 +23,10 @@
       </ul>
     </nav>
   </header>
-  <section class="call_to_action">
+  <section id="call_to_action">
     <h2 class="hidden">Call-to-action</h2>
     <article>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa mollitia ipsum perferendis, maiores in. Facilis, voluptate magnam reiciendis ab amet!</article>
-    <div id="slides"><img src="https://placeimg.com/1448/360/nature" alt=""></div>
-
+    <div class="slides"><img src="https://placeimg.com/1448/360/nature" alt=""></div>
   </section>
   <section id="signup">
     <h2 class="hidden">Sign up form</h2>
@@ -35,41 +34,53 @@
     <div class="signup">
       <form action=""><input type="email"><input value="Sign up" type="submit"></form>
     </div>
-
   </section>
   <section class="deadline">
-
   </section>
   <section id="how_we_work">
     <h2>How we work</h2>
     <article>
-      <img src="
-http://www.lingulo.com/tutorial-content/html5/img/icon1.png" alt="Lock">
+      <img src="http://www.lingulo.com/tutorial-content/html5/img/icon1.png" alt="Lock">
         <h3>Lorem ipsum dolor sit amet.</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, aspernatur.</p>
       </img>
     </article>
     <article>
-      <img src="
-http://www.lingulo.com/tutorial-content/html5/img/icon2.png" alt="Phone">
+      <img src="http://www.lingulo.com/tutorial-content/html5/img/icon2.png" alt="Phone">
         <h3>In eaque, repellat. Doloremque, ea.</h3>
         <p>Explicabo fuga, sed esse iste assumenda illum dolorem neque quis.</p>
       </img>
     </article>
     <article>
-      <img src="
-http://www.lingulo.com/tutorial-content/html5/img/icon3.png" alt="Settings">
+      <img src="http://www.lingulo.com/tutorial-content/html5/img/icon3.png" alt="Settings">
         <h3>Nihil molestias officiis quasi ipsam.</h3>
         <p>Ratione illo iure error vel aliquam sunt, accusantium magnam recusandae.</p>
       </img>
     </article>
-
   </section>
-  <section class="portfolio">
-
+  <section id="portfolio">
+ <h2>Portfolio</h2>
+ <article> 
+    <div class="img-item"></div>
+    <div class="img-item"></div>
+    <div class="img-item"></div>
+    <div class="img-item"></div>
+  </article>
+      <h3 class="hidden">Description</h3>
+  <figure>
+      <img src="" alt="">
+      <figcaption>Some description</figcaption>
+  </figure>
   </section>
   <footer>
-
+       <h2 class="hidden">Footer</h2>
+       <section id="copyright">
+		<h3 class="hidden">Copyright notice</h3> 
+		<div class="wrapper"></div>
+			<div class="social"></div>
+				<a href=""><img src="" alt="" class="social_icon"></a>
+			<p>Copyright text</p>
+			</section>
   </footer>
 </body>
 </html>
